2006-04-10  Chris Toshok  <toshok@ximian.com>

	* Starcraft/Starcraft.Gui/ConnectionScreen.cs: add Ok dialog when
	people select Battle.net.

	* Starcraft/Starcraft.Gui/credits.txt: thank the
	mono/sdl/sdldotnet projects.

2006-04-10  Chris Toshok  <toshok@ximian.com>

	* Starcraft/Starcraft.Gui/ConnectionScreen.cs: populate the
	ListBox element with our choices, and handle the cursor moving
	properly.  Ifdef this for the time being to only display
	Battle.net.

	* Starcraft/Starcraft.Gui/GameModeDialog.cs: insert the title
	string in the dialog, and change Canceled/Activated to
	Cancel/Activate.

	* Starcraft/Starcraft.Gui/UIDialog.cs: keep track of the parent
	UIScreen that popped us up.
	(ShowDialog): overload this so we can remove ourselves from the
	painter before showing the new dialog.  In a better world we'd
	just show the new popup at a higher layer.
	(DismissDialog): overload to add ourselves back to the painter.

	* Starcraft/Starcraft.Gui/GuiUtil.cs: add another ComposeText
	overload.

	* Starcraft/Starcraft.Gui/MainMenu.cs: pop up Ok dialogs with
	messages about missing functionality (no cinematics and no
	campaign editor.)

	* Starcraft/Starcraft.Gui/LoginScreen.cs (ResourceLoader): for the
	ok button pop up a dialog saying what we should do in this case.
	Also add functionality for the new button (pops up an entry
	dialog) and delete button (pops up an ok/cancel dialog).
	(KeyboardDown): forward on UpArrow/DownArrow to the list box
	element.
	(NameAlreadyExists): pop up an OkDialog.

	* Starcraft/Starcraft.Gui/UIPainter.cs: clean up warnings, and
	make it compile with -define:SHOW_ELEMENT_BORDERS.

	* Starcraft/Starcraft.Gui/CreditsScreen.cs: clean up some
	warnings.

	* Starcraft/Starcraft.Gui/Builtins.cs: add some more strings for
	the login screen dialogs.

	* Starcraft/Starcraft.Gui/UIElement.cs (Mpq): add getter.
	(Text): use ClearSurface.
	(Sensitive): same.
	(Palette): new getter/setter.
	(Font): new getter/setter.